# embedded-template

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: ci.yml
app/: CMakeLists.txt  main.c
domain/: CMakeLists.txt  control.c  control.h
hal/: CMakeLists.txt  gpio.h
tests/: CMakeLists.txt  test_control.c
tests/mocks/: Mockgpio.c  Mockgpio.h
